Changed some route names

--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -2,7 +2,7 @@
 {{#if error}}
   <p>{{error}}</p>
 {{/if}}
-<form action="/api/login" method="post">
+<form action="/login" method="post">
   <input type="text" name="username" placeholder="Username..." />
   <input type="password" name="password" placeholder="Password..." />
   <button type="submit">Login</button>
