--- a/src/views/user/profile.handlebars
+++ b/src/views/user/profile.handlebars
@@ -1,4 +1,4 @@
 <h1>{{username}}</h1>
-<form action="/api/logout" method="post">
+<form action="/logout" method="post">
   <button type="submit">Logout</button>
 </form>
