--- a/src/views/signup.handlebars
+++ b/src/views/signup.handlebars
@@ -2,7 +2,7 @@
 {{#if error}}
   <p>{{error}}</p>
 {{/if}}
-<form action="/api/signup" method="post">
+<form action="/signup" method="post">
   <input type="email" name="email" placeholder="Email..." />
   <input type="text" name="username" placeholder="Username..." />
   <input type="password" name="password" placeholder="Password..." />
