--- a/src/views/auth/login.handlebars
+++ b/src/views/auth/login.handlebars
@@ -1,9 +1,11 @@
 <h1>Login page.</h1>
-{{#if error}}
-  <p>{{error}}</p>
-{{/if}}
-<form action="/login" method="post">
-  <input type="text" name="username" placeholder="Username..." />
-  <input type="password" name="password" placeholder="Password..." />
-  <button type="submit">Login</button>
+<form>
+  <label for="username">Username:</label>
+  <input type="text" name="username" />
+
+  <label for="password">Password:</label>
+  <input type="password" name="password" />
+
+  <button id="loginButton">Login</button>
 </form>
+<script src="/public/js/login.js"></script>
