--- a/src/views/auth/signup.handlebars
+++ b/src/views/auth/signup.handlebars
@@ -1,10 +1,14 @@
 <h1>Signup page.</h1>
-{{#if error}}
-  <p>{{error}}</p>
-{{/if}}
-<form action="/signup" method="post">
-  <input type="email" name="email" placeholder="Email..." />
-  <input type="text" name="username" placeholder="Username..." />
-  <input type="password" name="password" placeholder="Password..." />
-  <button type="submit">Signup</button>
+<form>
+  <label for="email">Email:</label>
+  <input type="email" name="email" />
+
+  <label for="username">Username:</label>
+  <input type="text" name="username" />
+
+  <label for="password">Password:</label>
+  <input type="password" name="password" />
+
+  <button id="signupButton">Login</button>
 </form>
+<script src="/public/js/signup.js"></script>
