Added kicking and deleting users

--- a/src/views/user/profile.handlebars
+++ b/src/views/user/profile.handlebars
@@ -13,7 +13,7 @@
     <label for="lightRadio">Light</label>
     <input type="radio" id="lightRadio" name="color" value="light" />
 
-    <button id="updateUserButton" type="submit">Update User</button>
+    <button id="updateUserButton">Update User</button>
   </form>
 
   <h2>Servers</h2>
@@ -81,9 +81,7 @@
     <button type="submit">Logout</button>
   </form>
 
-  <form>
-    <button id="deleteUserButton" type="submit">Delete User</button>
-  </form>
+  <button id="deleteUserButton">Delete User</button>
 {{/if}}
 <script src="/public/js/user.js"></script>
 <script src="/public/js/server.js"></script>
