--- a/src/views/server/server.handlebars
+++ b/src/views/server/server.handlebars
@@ -2,7 +2,28 @@
 <p>{{description}}</p>
 <h2>Users</h2>
 <ul>
-  {{#each users}}
-    <li><a id="{{id}}" href="/user/{{id}}">{{username}}</a></li>
-  {{/each}}
+  {{#if owner}}
+    {{#each users}}
+      <li>
+        <form id="{{id}}">
+          <a href="/user/{{id}}">{{username}}</a>
+          <button class="kickUserButtons">Kick</button>
+        </form>
+      </li>
+    {{/each}}
+  {{else}}
+    {{#each users}}
+      <li>
+        <form id="{{id}}">
+          <a href="/user/{{id}}">{{username}}</a>
+        </form>
+      </li>
+    {{/each}}
+  {{/if}}
 </ul>
+{{#if owner}}
+  <button id="deleteServerButton">Delete Server</button>
+{{else}}
+  <button id="leaveServerButton">Leave Server</button>
+{{/if}}
+<script src="/public/js/server.js"></script>
