--- a/src/views/signup.handlebars
+++ b/src/views/signup.handlebars
@@ -9,6 +9,6 @@
   <label for="password">Password:</label>
   <input type="password" name="password" />
 
-  <button id="signupButton">Login</button>
+  <button id="signupButton">Signup</button>
 </form>
 <script src="/public/js/signup.js"></script>
