--- a/src/views/user/profile.handlebars
+++ b/src/views/user/profile.handlebars
@@ -23,7 +23,6 @@
       <li>
         <form id="{{id}}">
           <a href="/server/{{id}}">{{name}}</a>
-          <button class="leaveServerButtons">Leave</button>
         </form>
       </li>
     {{/each}}
@@ -66,6 +65,9 @@
   <form>
     <label for="name">Server Name:</label>
     <input type="text" name="name" />
+
+    <label for="description">Server Description:</label>
+    <input type="text" name="description" />
 
     <button id="createServerButton">Create Server</button>
   </form>
