Added frontend for landing, signup, and login

--- a/src/views/landing.handlebars
+++ b/src/views/landing.handlebars
@@ -1,3 +1,10 @@
-<h1>Landing page.</h1>
-<a href="/signup">Sign Up</a>
-<a href="/login">Log In</a>
+<main class="landing__main">
+  <nav class="landing__nav">
+    <a href="/">Nexus</a>
+    <ul>
+      <li><a href="/signup">Signup</a></li>
+      <li><a href="/login">Login</a></li>
+    </ul>
+  </nav>
+  <h1>NEXUS</h1>
+</main>
