--- a/src/views/server/server.handlebars
+++ b/src/views/server/server.handlebars
@@ -33,8 +33,7 @@
     <label for="description">Channel Description:</label>
     <input type="text" name="description" />
 
-
-    <input type="range" min="0" max="9" name="permissionLevel">
+    <input type="range" min="0" max="9" name="permissionLevel" />
 
     <button id="createChannelButton">Create</button>
   </form>
