--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -1,12 +1,19 @@
-<h1>Login page.</h1>
-<form>
-  <label for="username">Username:</label>
-  <input type="text" name="username" />
+<main class="login__main">
+  <nav class="login__nav">
+    <a href="/">Nexus</a>
+    <ul>
+      <li><a href="/signup">Signup</a></li>
+      <li><a href="/login">Login</a></li>
+    </ul>
+  </nav>
+  <h1>Login</h1>
+  <form>
+    <label for="username">Username:</label>
+    <input type="text" name="username" />
 
-  <label for="password">Password:</label>
-  <input type="password" name="password" />
+    <label for="password">Password:</label>
+    <input type="password" name="password" />
 
-  <button id="loginButton">Login</button>
-</form>
-
-<script src="/public/js/login.js"></script>
+    <button id="login__button">Login</button>
+  </form>
+</main>
