--- a/src/views/landing.handlebars
+++ b/src/views/landing.handlebars
@@ -1,10 +1,11 @@
 <main class="landing__main">
   <nav class="landing__nav">
-    <a href="/">Nexus</a>
+    <a href="/"><strong>Nexus</strong></a>
     <ul>
       <li><a href="/signup">Signup</a></li>
       <li><a href="/login">Login</a></li>
     </ul>
   </nav>
-  <h1>NEXUS</h1>
+  <h1><strong>Nexus</strong></h1>
+  <p>An online chat application.</p>
 </main>
