--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -7,13 +7,13 @@
     </ul>
   </nav>
   <h1>Login</h1>
-  <form>
+  <form class="login__form">
     <label for="username">Username:</label>
-    <input type="text" name="username" />
+    <input type="text" name="username" autocomplete="off" />
 
     <label for="password">Password:</label>
-    <input type="password" name="password" />
+    <input type="password" name="password" autocomplete="off" />
 
-    <button id="login__button">Login</button>
+    <button id="login__submit-button">Login</button>
   </form>
 </main>
