--- a/src/public/css/globals.css
+++ b/src/public/css/globals.css
@@ -4,37 +4,36 @@
   --text-negative: #333333;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background-primary: #121212;
-    --background-secondary: #1e1e1e;
-    --text-negative: #ffffff;
-  }
+html[data-theme="light"] {
+  --background-primary: #ffffff;
+  --background-secondary: #f5f5f5;
+  --text-negative: #333333;
+}
+
+html[data-theme="dark"] {
+  --background-primary: #121212;
+  --background-secondary: #1e1e1e;
+  --text-negative: #ffffff;
 }
 
 * {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 }
 
-html,
 body {
-  font-family: "Lato", sans-serif;
-  font-weight: 400;
-  font-style: normal;
   color: var(--text-negative);
+  font-style: normal;
+  font-weight: 400;
+  font-family: "Lato", sans-serif;
 }
 
 button {
+  cursor: pointer;
   background-color: var(--text-negative);
   color: var(--background-primary);
   font-family: inherit;
-}
-
-button:hover,
-a:hover {
-  scale: 1.05;
 }
 
 input,
