--- a/src/public/css/landing.css
+++ b/src/public/css/landing.css
@@ -1,41 +1,43 @@
-.landing__main {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-  background-color: var(--background-primary);
-}
-
-.landing__main h1 {
-  font-size: 5rem;
-}
-
 .landing__nav {
+  display: flex;
   position: fixed;
   top: 0;
-  display: flex;
   justify-content: space-between;
-  width: 100vw;
-  padding: 1rem;
-  font-size: 1.25rem;
-  border-bottom: 5px solid var(--background-secondary);
   z-index: 10;
+  border-bottom: 5px solid var(--background-secondary);
+  padding: 1rem;
+  width: 100%;
+  font-size: 1.25rem;
+
+  & a {
+    color: inherit;
+    text-decoration: none;
+  }
+
+  & ul {
+    list-style: none;
+
+    & li {
+      display: inline-block;
+      margin: 0 0.5rem;
+    }
+  }
 }
 
-.landing__nav a {
-  text-decoration: none;
-  color: inherit;
-}
+.landing__main {
+  display: flex;
+  row-gap: 1rem;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--background-primary);
+  min-height: 100vh;
 
-.landing__nav ul {
-  list-style: none;
-}
+  & h1 {
+    font-size: 5rem;
+  }
 
-.landing__nav ul li {
-  display: inline-block;
-  margin: 0 0.5rem;
-}
-
-.landing__nav ul li:hover {
-  scale: 1.05;
+  & p {
+    font-size: 1.25rem;
+  }
 }
