--- a/src/public/css/loader.css
+++ b/src/public/css/loader.css
@@ -1,22 +1,22 @@
 #loader__background {
+  display: flex;
   position: absolute;
   top: 0;
-  display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
-  width: 100vw;
   z-index: 20;
+  width: 100vw;
+  height: 100vh;
 }
 
 .loader {
   display: inline-block;
-  width: 5rem;
-  height: 5rem;
-  border: 7.5px solid #808080;
+  animation: rotation 1s linear infinite;
+  border: 7.5px solid silver;
   border-bottom-color: transparent;
   border-radius: 50%;
-  animation: rotation 1s linear infinite;
+  width: 5rem;
+  height: 5rem;
 }
 
 @keyframes rotation {
