--- a/src/public/css/login.css
+++ b/src/public/css/login.css
@@ -1,70 +1,64 @@
+.login__nav {
+  display: flex;
+  position: fixed;
+  top: 0;
+  justify-content: space-between;
+  z-index: 10;
+  border-bottom: 5px solid var(--background-secondary);
+  padding: 1rem;
+  width: 100%;
+  font-size: 1.25rem;
+
+  & a {
+    color: inherit;
+    text-decoration: none;
+  }
+
+  & ul {
+    list-style: none;
+
+    & li {
+      display: inline-block;
+      margin: 0 0.5rem;
+    }
+  }
+}
+
 .login__main {
   display: flex;
+  row-gap: 1rem;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  row-gap: 1rem;
-  min-height: 100vh;
-  background-color: var(--background-primary);
   z-index: 10;
+  background-color: var(--background-primary);
+  min-height: 100vh;
+
+  & h1 {
+    font-size: 2.75rem;
+  }
 }
 
-.login__main h1 {
-  font-size: 3.5rem;
-}
-
-.login__main form {
+.login__form {
   display: flex;
-  flex-direction: column;
   row-gap: 1rem;
-  width: 35%;
-}
+  flex-direction: column;
+  width: 45rem;
 
-.login__main form label {
-  font-size: 1.25rem;
-}
+  & label,
+  input,
+  button {
+    font-size: 1.25rem;
+  }
 
-.login__main form input,
-.login__main form button {
-  padding: 1rem;
-  border-radius: 5px;
-}
+  & input,
+  button {
+    border-radius: 5px;
+    padding: 0.5rem;
+  }
 
-.login__main form input {
-  font-size: 1.25rem;
-}
-
-.login__main form button {
-  margin-top: 1rem;
-  font-size: 1.25rem;
-  outline: none;
-}
-
-.login__nav {
-  position: fixed;
-  top: 0;
-  display: flex;
-  justify-content: space-between;
-  width: 100vw;
-  padding: 1rem;
-  font-size: 1.25rem;
-  border-bottom: 5px solid var(--background-secondary);
-}
-
-.login__nav a {
-  text-decoration: none;
-  color: inherit;
-}
-
-.login__nav ul {
-  list-style: none;
-}
-
-.login__nav ul li {
-  display: inline-block;
-  margin: 0 0.5rem;
-}
-
-.login__nav ul li:hover {
-  scale: 1.05;
+  & button {
+    margin-top: 1rem;
+    outline: none;
+  }
 }
