--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-theme="light">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="/public/css/globals.css" />
     <link rel="stylesheet" href="/public/css/toast.css" />
     <link rel="stylesheet" href="/public/css/loader.css" />
+    <link rel="stylesheet" href="/public/css/error.css" />
     {{#each stylesheets}} {{{this}}} {{/each}}
     <title>Nexus</title>
   </head>
