--- a/src/views/signup.handlebars
+++ b/src/views/signup.handlebars
@@ -7,16 +7,19 @@
     </ul>
   </nav>
   <h1>Signup</h1>
-  <form>
+  <form class="signup__form">
     <label for="email">Email</label>
-    <input type="email" name="email" />
+    <input type="email" name="email" autocomplete="off" />
 
     <label for="username">Username</label>
-    <input type="text" name="username" />
+    <input type="text" name="username" autocomplete="off" />
 
     <label for="password">Password</label>
-    <input type="password" name="password" />
+    <input type="password" name="password" autocomplete="off" />
 
-    <button id="signup__button">Signup</button>
+    <label for="repassword">Re-enter Password</label>
+    <input type="password" name="repassword" autocomplete="off" />
+
+    <button id="signup__submit-button">Signup</button>
   </form>
 </main>
