--- a/src/public/css/globals.css
+++ b/src/public/css/globals.css
@@ -29,6 +29,11 @@ body {
   font-family: "Lato", sans-serif;
 }
 
+select {
+  background-color: var(--background-primary);
+  color: var(--text-negative);
+}
+
 button {
   cursor: pointer;
   background-color: var(--text-negative);
@@ -37,6 +42,8 @@ button {
 }
 
 input,
+textarea,
+select,
 button {
   border-style: solid;
 }
