--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -8,10 +8,10 @@
   </nav>
   <h1>Login</h1>
   <form class="login__form">
-    <label for="username">Username:</label>
+    <label for="username">Username</label>
     <input type="text" name="username" autocomplete="off" />
 
-    <label for="password">Password:</label>
+    <label for="password">Password</label>
     <input type="password" name="password" autocomplete="off" />
 
     <button id="login__submit-button">Login</button>
