--- a/src/public/css/toast.css
+++ b/src/public/css/toast.css
@@ -1,13 +1,13 @@
 #toast__background {
   display: flex;
-  position: absolute;
+  position: fixed;
   top: 0;
   justify-content: center;
   align-items: center;
   z-index: 20;
   backdrop-filter: blur(2.5px);
   width: 100vw;
-  height: 100vh;
+  height: 100%;
 }
 
 #toast__box {
