--- a/src/views/user/servers.handlebars
+++ b/src/views/user/servers.handlebars
@@ -16,7 +16,7 @@
       </ul>
     </div>
 
-    <div class="servers__forms">
+    <div class="servers__actions">
       <h2>Create Server</h2>
       <form>
         <label for="name">Name</label>
