--- a/src/public/css/user/profile.css
+++ b/src/public/css/user/profile.css
@@ -6,6 +6,31 @@
   padding: 2.5rem;
   min-height: 100vh;
 
+  & header {
+    & h1 {
+      margin-bottom: 1.5rem;
+      font-size: 2.75rem;
+    }
+
+    & p {
+      font-size: 1.25rem;
+      white-space: break-spaces;
+    }
+  }
+
+  & button {
+    border-radius: 5px;
+    padding: 0.75rem 1.75rem;
+    width: fit-content;
+    font-size: 1.25rem;
+  }
+}
+
+.profile__content {
+  display: flex;
+  row-gap: 1.5rem;
+  flex-direction: column;
+
   & h1 {
     font-size: 2.75rem;
   }
@@ -18,11 +43,6 @@
   & h2 {
     font-size: 1.75rem;
     text-decoration: underline;
-  }
-
-  & div {
-    display: flex;
-    column-gap: 1rem;
   }
 
   & button {
@@ -40,6 +60,7 @@
   align-items: center;
   width: fit-content;
   color: var(--text-negative);
+  font-size: 1.2rem;
   text-decoration: none;
 }
 
@@ -47,4 +68,12 @@
   width: 2.5rem;
   height: 2.5rem;
   color: var(--text-negative);
+}
+
+#profile__delete-button {
+  align-self: flex-end;
+  border-radius: 5px;
+  padding: 0.75rem 1.75rem;
+  width: fit-content;
+  font-size: 1.25rem;
 }
