--- a/src/public/css/user/profile.css
+++ b/src/public/css/user/profile.css
@@ -47,10 +47,18 @@
 
   & button {
     border-radius: 5px;
-    padding: 0.5rem;
+    padding: 0.75rem 1.75rem;
     width: fit-content;
     font-size: 1.25rem;
   }
+}
+
+.profile__info {
+  border: 1px solid var(--text-negative);
+  border-radius: 5px;
+  padding: 0.75rem 1.75rem;
+  width: fit-content;
+  font-size: 1.25rem;
 }
 
 .profile__link {
