--- a/src/public/css/user/main.css
+++ b/src/public/css/user/main.css
@@ -1,4 +1,4 @@
-.profile__main {
+.user__main {
   display: flex;
   row-gap: 2.5rem;
   flex-direction: column;
@@ -26,7 +26,7 @@
   }
 }
 
-.profile__content {
+.user__content {
   display: flex;
   row-gap: 1.5rem;
   flex-direction: column;
@@ -53,7 +53,7 @@
   }
 }
 
-.profile__info {
+.user__info {
   border: 1px solid var(--text-negative);
   border-radius: 5px;
   padding: 0.75rem 1.75rem;
@@ -61,24 +61,25 @@
   font-size: 1.25rem;
 }
 
-.profile__link {
+.user__link {
   display: flex;
   column-gap: 1rem;
   justify-content: center;
   align-items: center;
+  margin: 0.75rem 0;
   width: fit-content;
   color: var(--text-negative);
   font-size: 1.2rem;
   text-decoration: none;
 }
 
-.profile__link-icon {
+.user__link-icon {
   width: 2.5rem;
   height: 2.5rem;
   color: var(--text-negative);
 }
 
-#profile__delete-button {
+#user__delete-button {
   align-self: flex-end;
   border-radius: 5px;
   padding: 0.75rem 1.75rem;
