--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -30,6 +30,7 @@
     <script src="/public/js/toast.js"></script>
     <script src="/public/js/loader.js"></script>
     <script src="/public/js/helpers.js"></script>
+    <script src="https://cdn.socket.io/4.7.4/socket.io.min.js"></script>
     {{#each scripts}} {{{this}}} {{/each}}
   </body>
 </html>
