--- a/src/views/channel/main.handlebars
+++ b/src/views/channel/main.handlebars
@@ -20,7 +20,7 @@
   </ul>
 
   <form class="channel__submit-form">
-    <input type="text" name="message" />
+    <input type="text" name="message" autocomplete="off" />
     
     <button id="channel__send-button">Send</button>
   </form>
