--- a/src/public/css/user/friends.css
+++ b/src/public/css/user/friends.css
@@ -56,6 +56,12 @@
           padding: 0.75rem 1.75rem;
           width: fit-content;
           font-size: 1.25rem;
+
+          & a {
+            padding: 0;
+            color: inherit;
+            font-size: inherit;
+          }
         }
       }
     }
