--- a/src/views/user/friends.handlebars
+++ b/src/views/user/friends.handlebars
@@ -10,9 +10,9 @@
             <form id="{{id}}">
               <a href="/user/{{id}}">{{username}}</a>
               <div>
-                <button>
-                  <a href="/privateMessage/{{privateMessageId}}">Chat</a>
-                </button>
+                <a href="/privateMessage/{{privateMessageId}}">
+                  Chat
+                </a>
                 <button class="friends__remove-buttons">Remove</button>
               </div>
             </form>
