--- a/src/public/css/user/friends.css
+++ b/src/public/css/user/friends.css
@@ -51,16 +51,26 @@
           font-size: 1.75rem;
         }
 
-        & button {
-          border-radius: 5px;
-          padding: 0.75rem 1.75rem;
-          width: fit-content;
-          font-size: 1.25rem;
+        & div {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+
+          & button,
+          a {
+            border-radius: 5px;
+            padding: 0.75rem 1.75rem;
+            width: fit-content;
+            font-size: 1.25rem;
+          }
 
           & a {
-            padding: 0;
-            color: inherit;
-            font-size: inherit;
+            background-color: var(--text-negative);
+            color: var(--background-primary);
+          }
+
+          & a:hover {
+            text-decoration: none;
           }
         }
       }
