--- a/src/public/css/error.css
+++ b/src/public/css/error.css
@@ -6,4 +6,13 @@
   align-items: center;
   background-color: var(--background-primary);
   height: 100vh;
+
+  & a {
+    color: var(--text-negative);
+    text-decoration: none;
+  }
+
+  & a:hover {
+    text-decoration: underline;
+  }
 }
