--- a/src/public/css/user/friends.css
+++ b/src/public/css/user/friends.css
@@ -53,14 +53,15 @@
 
         & div {
           display: flex;
+          column-gap: 1rem;
           justify-content: space-between;
           align-items: center;
 
           & button,
           a {
+            border: none;
             border-radius: 5px;
             padding: 0.75rem 1.75rem;
-            width: fit-content;
             font-size: 1.25rem;
           }
 
