--- a/src/views/landing.handlebars
+++ b/src/views/landing.handlebars
@@ -1,11 +1,12 @@
 <main class="landing__main">
   <nav class="landing__nav">
-    <a href="/"><strong>Nexus</strong></a>
+   <a href="/" class="title"><strong>Nexus</strong></a>
     <ul>
-      <li><a href="/signup">Signup</a></li>
       <li><a href="/login">Login</a></li>
+      {{!-- <li><a href="/login">Login</a></li> --}}
     </ul>
   </nav>
-  <h1><strong>Nexus</strong></h1>
-  <p>An online chat application.</p>
+  <h1><strong>Get Instant Communication & Collaboration</strong></h1>
+  <p>Work and communicate with others efficiently.</p>
+  <a class="signupBtn" href="/signup">Sign up now</a>
 </main>
