--- a/src/public/css/user/friends.css
+++ b/src/public/css/user/friends.css
@@ -21,16 +21,21 @@
 
   & h2 {
     font-size: 1.75rem;
-    text-decoration: underline;
+    font-weight: 800;
   }
 }
 
 .friends__content {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: calc(100vh-500px);
+  margin-top: 40px;
   justify-content: space-between;
 }
 
 .friends__friends {
+  margin-bottom: 120px;
   padding-right: 1rem;
   width: 50%;
 
@@ -143,4 +148,10 @@
       }
     }
   }
+}
+
+svg {
+  width: 2.5rem;
+  height: 2.5rem;
+  color: var(--text-negative);
 }
