--- a/src/public/css/user/servers.css
+++ b/src/public/css/user/servers.css
@@ -18,7 +18,10 @@
 
 .servers__content {
   display: flex;
+  flex-direction: column;
+  margin-top: 30px;
   justify-content: space-between;
+  align-items: center;
 
   & h1 {
     font-size: 2.75rem;
