--- a/src/public/css/landing.css
+++ b/src/public/css/landing.css
@@ -34,10 +34,21 @@
   min-height: 100vh;
 
   & h1 {
-    font-size: 5rem;
+    padding-top: 10px;
+    font-size: 3.5rem;
+    text-align: left;
+    margin-left: 100px;
   }
 
   & p {
-    font-size: 1.25rem;
+    font-size: 1.5rem;
+    text-align: left;
+    padding-left: 100px;
+  }
+  .signupBtn {
+    text-align: left;
+    padding-left: 100px;
+    padding-top: 50px;
+    font-size: 1.5rem;
   }
 }
