--- a/src/public/css/user/main.css
+++ b/src/public/css/user/main.css
@@ -70,12 +70,17 @@
 }
 
 .user__link {
+  border: 1px solid;
+  border-radius: 8px;
+  padding: 16px;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
   display: flex;
-  column-gap: 1rem;
   justify-content: center;
   align-items: center;
-  margin: 0.75rem 0;
-  width: fit-content;
+  margin: 8px;
+  width: 100%;
+  height: 100%;
   color: var(--text-negative);
   font-size: 1.2rem;
   text-decoration: none;
@@ -103,25 +108,13 @@
 }
 
 .card {
-  border: 1px solid;
-  border-radius: 8px;
-  padding: 16px;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
   display: flex;
   margin: 8px;
   width: 100%;
   height: 100%;
   justify-content: center;
-
-  
-
-  & a {
-    text-decoration: none;   
-    display: flex;          
-    flex-direction: column;  
-    align-items: center;
-  }
+  flex-direction: column;  
+  align-items: center;
 
   & svg {
     height: 100px;            
@@ -130,6 +123,4 @@
   }
 
 }
-.card:hover {
-  background-color: dodgerblue;
-}
+
