--- a/src/public/css/channel/main.css
+++ b/src/public/css/channel/main.css
@@ -48,7 +48,6 @@
 
     & a {
       width: fit-content;
-      color: var(--text-negative);
       font-size: 1.15rem;
       text-decoration: none;
     }
@@ -60,6 +59,19 @@
     & p {
       white-space: break-spaces;
       word-break: break-all;
+      background-color: #f0f0f0; /* 對話框的背景顏色 */
+      border-radius: 5px; /* 圓角 */
+      padding: 10px; /* 內邊距 */
+      width: fit-content; 
+      color: black; /* 根據文字內容調整寬度 */
+    }
+
+    &.own-message {
+      align-self: flex-end; /* 將自己的訊息靠右對齊 */
+    }
+
+    &.other-message {
+      align-self: flex-start; /* 將其他人的訊息靠左對齊 */
     }
   }
 }
