--- a/src/views/server/main.handlebars
+++ b/src/views/server/main.handlebars
@@ -1,4 +1,5 @@
 <main class="server__main">
+  <a href="/user/servers/{{userId}}">Go back to servers selection</a>
   <header>
     <h1>{{name}}</h1>
     <p>{{description}}</p>
