Added seed task and reformatted code

--- a/src/views/landing.handlebars
+++ b/src/views/landing.handlebars
@@ -1,9 +1,9 @@
 <main class="landing__main">
   <nav class="landing__nav">
-   <a href="/" class="title"><strong>Nexus</strong></a>
+    <a href="/" class="title"><strong>Nexus</strong></a>
     <ul>
       <li><a href="/login">Login</a></li>
-      {{!-- <li><a href="/login">Login</a></li> --}}
+      {{! <li><a href="/login">Login</a></li> }}
     </ul>
   </nav>
   <h1><strong>Get Instant Communication & Collaboration</strong></h1>
