--- a/src/public/css/user/main.css
+++ b/src/public/css/user/main.css
@@ -70,15 +70,15 @@
 }
 
 .user__link {
-  border: 1px solid;
-  border-radius: 8px;
-  padding: 16px;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: 0.3s;
   margin: 8px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  border: 1px solid;
+  border-radius: 8px;
+  padding: 16px;
   width: 100%;
   height: 100%;
   color: var(--text-negative);
@@ -86,7 +86,7 @@
   text-decoration: none;
 }
 
-a:hover{
+a:hover {
   background-color: dodgerblue;
 }
 
@@ -107,24 +107,22 @@ a:hover{
 .form {
   display: flex;
   justify-content: space-between;
-  width: 100%;
   padding: 10px;
+  width: 100%;
 }
 
 .card {
   display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   margin: 8px;
   width: 100%;
   height: 100%;
-  justify-content: center;
-  flex-direction: column;  
-  align-items: center;
 
   & svg {
-    height: 100px;            
-    width: 100px;             
     margin-bottom: 10px;
+    width: 100px;
+    height: 100px;
   }
-
 }
-
