--- a/src/views/server/editChannel.handlebars
+++ b/src/views/server/editChannel.handlebars
@@ -2,7 +2,11 @@
   <a href="/server/{{serverId}}">Go back to server</a>
 
   <h1>Editing {{name}}</h1>
-  <form id="{{id}}" class="edit__form" oninput="output.value=parseInt(permissionLevel.value)">
+  <form
+    id="{{id}}"
+    class="edit__form"
+    oninput="output.value=parseInt(permissionLevel.value)"
+  >
     <label for="name">Name</label>
     <input type="text" name="name" value="{{name}}" autocomplete="off" />
 
