Fixed some bugs

--- a/src/public/css/user/servers.css
+++ b/src/public/css/user/servers.css
@@ -19,9 +19,9 @@
 .servers__content {
   display: flex;
   flex-direction: column;
-  margin-top: 30px;
   justify-content: space-between;
   align-items: center;
+  margin-top: 30px;
 
   & h1 {
     font-size: 2.75rem;
@@ -82,7 +82,9 @@
     input,
     textarea,
     button {
+      cursor: default;
       font-size: 1.25rem;
+      text-align: center;
     }
 
     & label {
