--- a/src/public/css/server/main.css
+++ b/src/public/css/server/main.css
@@ -152,3 +152,10 @@
     font-size: 1.25rem;
   }
 }
+
+.server__unkick-button {
+  border-radius: 5px;
+  padding: 0.75rem 1.75rem;
+  width: fit-content;
+  font-size: 1.25rem;
+}
