--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -9,10 +9,10 @@
   <h1>Login</h1>
   <form class="login__form">
     <label for="username">Username</label>
-    <input type="text" name="username" autocomplete="off" />
+    <input id="username" type="text" name="username" autocomplete="off" />
 
     <label for="password">Password</label>
-    <input type="password" name="password" autocomplete="off" />
+    <input id="password" type="password" name="password" autocomplete="off" />
 
     <button id="login__submit-button">Login</button>
   </form>
