--- a/src/views/signup.handlebars
+++ b/src/views/signup.handlebars
@@ -9,16 +9,16 @@
   <h1>Signup</h1>
   <form class="signup__form">
     <label for="email">Email</label>
-    <input type="email" name="email" autocomplete="off" />
+    <input id="email" type="email" name="email" autocomplete="off" />
 
     <label for="username">Username</label>
-    <input type="text" name="username" autocomplete="off" />
+    <input id="username" type="text" name="username" autocomplete="off" />
 
     <label for="password">Password</label>
-    <input type="password" name="password" autocomplete="off" />
+    <input id="password" type="password" name="password" autocomplete="off" />
 
     <label for="repassword">Re-enter Password</label>
-    <input type="password" name="repassword" autocomplete="off" />
+    <input id="repassword" type="password" name="repassword" autocomplete="off" />
 
     <button id="signup__submit-button">Signup</button>
   </form>
