--- a/src/views/user/friends.handlebars
+++ b/src/views/user/friends.handlebars
@@ -25,7 +25,7 @@
       <h2>Send Friend Request</h2>
       <form>
         <label for="username">Username</label>
-        <input type="text" name="username" autocomplete="off" />
+        <input id="username" type="text" name="username" autocomplete="off" />
 
         <button id="friends__request-button">Send</button>
       </form>
