--- a/src/views/user/edit.handlebars
+++ b/src/views/user/edit.handlebars
@@ -5,6 +5,7 @@
   <form class="edit__form">
     <label for="username">Username</label>
     <input
+      id="username"
       type="text"
       name="username"
       value="{{username}}"
