--- a/src/views/server/editChannel.handlebars
+++ b/src/views/server/editChannel.handlebars
@@ -4,13 +4,14 @@
   <h1>Editing {{name}}</h1>
   <form id="{{id}}" class="edit__form" oninput="output.value=parseInt(permissionLevel.value)">
     <label for="name">Name</label>
-    <input type="text" name="name" value="{{name}}" autocomplete="off" />
+    <input id="name" type="text" name="name" value="{{name}}" autocomplete="off" />
 
     <label for="description">Description</label>
-    <textarea name="description" autocomplete="off">{{description}}</textarea>
+    <textarea id="description" name="description" autocomplete="off">{{description}}</textarea>
 
     <label for="permissionLevel">Permission Level</label>
     <input
+      id="permissionLevel" 
       type="range"
       value="{{permissionLevel}}"
       min="0"
