--- a/src/views/server/editUser.handlebars
+++ b/src/views/server/editUser.handlebars
@@ -5,6 +5,7 @@
   <form id="{{id}}" class="edit__form" oninput="output.value=parseInt(permissionLevel.value)">
     <label for="permissionLevel">Permission Level</label>
     <input
+      id="permissionLevel"
       type="range"
       value="{{permissionLevel}}"
       min="0"
