set a go baxk button to friends 'list

--- a/src/views/privateMessage/main.handlebars
+++ b/src/views/privateMessage/main.handlebars
@@ -1,4 +1,5 @@
 <main class="private-message__main">
+  <a href="/user/friends/{{userAId}}">Go back to friends'List</a>
   <header>
     <a href="/user/{{userBId}}">{{userBUsername}}</a>
     <h1>Private Message</h1>
